# desafio-mirante

./: .coverage  README.md  pyproject.toml
src/desafio_mirante/: __init__.py  app.py  main.py
src/desafio_mirante/application/: calculation_use_case.py
src/desafio_mirante/core/: arguments.py  file.py  money.py  product.py  report.py  sale.py  sale_item.py
src/desafio_mirante/core/dtos/: args.py  sale.py  sale_item.py
src/desafio_mirante/core/entities/: format.py  money.py  report.py  sale.py  sale_item.py
src/desafio_mirante/core/ports/: args_dto.py  file_parser.py
src/desafio_mirante/core/services/: calculation_service.py
src/desafio_mirante/infra/: cli.py  cli_options.py  csv_format.py  domain_encoder.py  file_parser.py  input.py  input_options.py  json_format.py  logger.py  output_json.py  output_text.py  text_format.py
src/desafio_mirante/output/: json_format.py  text_format.py
src/desafio_mirante/parser/: argument_parser.py  csv_parser.py
tests/: factories.py  fixtures.py  test_money.py  test_product.py  test_sale.py  test_sale_item.py
tests/e2e/: test_calculation.py
tests/unit/: test_money.py  test_product.py  test_sale.py  test_sale_item.py
