[project]
name = "desafio-mirante"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tianjos", email = "thiago.brito700@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
desafio-mirante = "desafio_mirante.main:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.taskipy.tasks]
build = 'uv pip install e .'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
dev = 'uv run python src/desafio_mirante/main.py'
test-unit = 'uv run pytest -m unit'
test-e2e = 'uv run pytest -m e2e'
test-cov = 'uv run pytest -s -x --cov=desafio_mirante -vv'

[tool.ruff]
line-length = 85

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ['src', 'tests']
addopts = '-p no:warnings'
